# uChaos

./: .gitignore  CMakeLists.txt  nrf52dk_nrf52832.overlay  prj.conf
src/: main.c
src/uchaos/: uchaos.h  uchaos_config.h  uchaos_defs.h  uchaos_types.h
src/uchaos/uchaos_battery/: uchaos_battery.c  uchaos_battery.h
src/uchaos/uchaos_console/: uchaos_console.c  uchaos_console.h
src/uchaos/uchaos_cpu/: uchaos_cpu.c  uchaos_cpu.h
src/uchaos/uchaos_memory/: uchaos_memory.c  uchaos_memory.h
src/uchaos/uchaos_sensor/: uchaos_sensor.c  uchaos_sensor.h
